--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   },
   "dependencies": {
     "react": "16.9.0",
+    "react-day-picker": "7.3.2",
     "react-dom": "16.9.0"
   },
   "devDependencies": {
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
+    "@types/react-day-picker": "5.3.0",
     "@types/react-dom": "16.9.0",
     "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
