--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "demo": "webpack-dev-server --open"
   },
   "dependencies": {
+    "moment": "2.24.0",
     "react": "16.9.0",
     "react-day-picker": "7.3.2",
     "react-dom": "16.9.0"
   },
   "devDependencies": {
-    "@types/node": "12.7.2",
+    "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-day-picker": "5.3.0",
     "@types/react-dom": "16.9.0",
@@ -16,10 +17,10 @@
     "html-webpack-plugin": "3.2.0",
     "source-map-loader": "0.2.4",
     "style-loader": "1.0.0",
-    "ts-loader": "6.0.4",
-    "typescript": "3.6.2",
-    "webpack": "4.39.3",
-    "webpack-cli": "3.3.7",
+    "ts-loader": "6.1.0",
+    "typescript": "3.6.3",
+    "webpack": "4.40.2",
+    "webpack-cli": "3.3.8",
     "webpack-dev-server": "3.8.0"
   }
 }
