--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-dom": "16.9.0",
     "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
+    "postcss-loader": "3.0.0",
+    "postcss-nested": "4.1.2",
     "source-map-loader": "0.2.4",
     "style-loader": "1.0.0",
     "ts-loader": "6.1.0",
