--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "scripts": {
-    "demo": "webpack-dev-server --open"
-  },
-  "dependencies": {
-    "moment": "2.24.0",
-    "react": "16.9.0",
-    "react-day-picker": "7.3.2",
-    "react-dom": "16.9.0"
-  },
-  "devDependencies": {
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-day-picker": "5.3.0",
-    "@types/react-dom": "16.9.0",
-    "css-loader": "3.2.0",
-    "html-webpack-plugin": "3.2.0",
-    "postcss-loader": "3.0.0",
-    "postcss-nested": "4.1.2",
-    "source-map-loader": "0.2.4",
-    "style-loader": "1.0.0",
-    "ts-loader": "6.1.0",
-    "typescript": "3.6.3",
-    "webpack": "4.40.2",
-    "webpack-cli": "3.3.8",
-    "webpack-dev-server": "3.8.0"
-  }
+    "scripts": {
+        "start": "webpack-dev-server --open"
+    },
+    "dependencies": {
+        "moment": "2.24.0",
+        "react": "16.9.0",
+        "react-day-picker": "7.3.2",
+        "react-dom": "16.9.0"
+    },
+    "devDependencies": {
+        "@types/node": "12.7.5",
+        "@types/react": "16.9.2",
+        "@types/react-day-picker": "5.3.0",
+        "@types/react-dom": "16.9.0",
+        "css-loader": "3.2.0",
+        "html-webpack-plugin": "3.2.0",
+        "postcss-loader": "3.0.0",
+        "postcss-nested": "4.1.2",
+        "source-map-loader": "0.2.4",
+        "style-loader": "1.0.0",
+        "ts-loader": "6.1.0",
+        "typescript": "3.6.3",
+        "webpack": "4.40.2",
+        "webpack-cli": "3.3.8",
+        "webpack-dev-server": "3.8.0"
+    }
 }
